# controller

./: .env  README.md  __init__.py  ai.py  arduino_serial.py  conf.toml  conversation.py  hardware_controller.py  instruction_prompt.py  main.py  plan.md  pyproject.toml  routers.py  schemas.py  serial.py
static/: admin.js  script.js
templates/: admin.html  index.html
